# Doiter

./: .eslintrc.cjs  .gitignore  Cargo.toml  package-lock.json  package.json  unocss.config.ts  vite.config.ts
adapters/static/: vite.config.ts
assets/: Preview_Mockup.psd
distsw/: index.html  manifest.webmanifest  q-manifest.json  service-worker.js  sw.js
patches/: @builder.io+qwik+1.2.19.patch
pkgs/this/: Cargo.toml
pkgs/this/src/: lib.rs
pkgs/this_dervie/: Cargo.toml
pkgs/this_dervie/src/: lib.rs
public/: db.js  manifest.json  worker.js
rust/: Cargo.toml
rust/src/: app_state.rs  main.rs
rust/src/manual/: mod.rs
rust/src/migrate/: mod.rs
rust/src/module/: axum.rs  helper.rs  mod.md  mod.rs
rust/src/types/: mod.rs  traits.rs
src/: global.css  root.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: db.ts  db.worker.ts  initDB.ts  initDB.tsx  initWorker.ts  worker.ts  workerDb.ts
src/components/: AddTodo.tsx  AppLoading.tsx  Container.tsx  FileSystem.tsx  Input.tsx  ManageWorkspace.tsx  Modal.tsx  Sql.tsx  Test.tsx  Todo.tsx  Todos.tsx
src/routes/: index.tsx
strapi/: package.json
strapi/src/api/todo/content-types/todo/: schema.json
this_derive/: Cargo.toml
