[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# this_derive = { path = "../pkgs/this_derive" }
axum = "0.6.12"
# sqlite = "0.32.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.35", features = ["full"] }
# axum-sqlite = "0.1.0"
